--- a/NewsApp/app/src/main/res/values/strings.xml
+++ b/NewsApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="search_title">Search</string>
     <string name="search_hint">Search Topic</string>
+    <string name="title_activity_news_article">NewsArticle</string>
 </resources>
