--- a/NewsApp/app/src/main/res/values/strings.xml
+++ b/NewsApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="search_title">Search</string>
     <string name="search_hint">Search Topic</string>
     <string name="title_activity_news_article">NewsArticle</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
