--- a/NewsApp/app/src/main/res/values/strings.xml
+++ b/NewsApp/app/src/main/res/values/strings.xml
@@ -7,4 +7,36 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="cheeses">
+        <item>feta</item>
+        <item>parm</item>
+        <item>cheddar</item>
+        <item>mozz</item>
+        <item>feta</item>
+        <item>parm</item>
+        <item>cheddar</item>
+        <item>mozz</item>
+        <item>feta</item>
+        <item>parm</item>
+        <item>cheddar</item>
+        <item>mozz</item>
+        <item>feta</item>
+        <item>parm</item>
+        <item>cheddar</item>
+        <item>mozz</item>
+        <item>feta</item>
+        <item>parm</item>
+        <item>cheddar</item>
+        <item>mozz</item>
+        <item>feta</item>
+        <item>parm</item>
+        <item>cheddar</item>
+        <item>mozz</item>
+        <item>feta</item>
+        <item>parm</item>
+        <item>cheddar</item>
+        <item>mozz</item>
+
+    </string-array>
 </resources>
